# T1

./: CMakeLists.txt  README.md  doxConfig
data/output/: current_requests.txt  current_trucks.txt  scn2.txt
src/: abstractAlgorithm.cpp  abstractAlgorithm.h  applicationController.cpp  applicationController.h  dataIO.cpp  dataIO.h  dataReader.cpp  dataReader.h  dataStructs.h  main.cpp  main.h
src/algorithms/: firstScenario.cpp  firstScenario.h  secondScenario.cpp  secondScenario.h  thirdScenario.cpp  thirdScenario.h  thirdScenario_.cpp  thirdScenario__.cpp  thirdScenario__.h
src/deprecated/: thirdScenario_.h
